src/comprehensive-rust(unfinished)/ok/rs/example_139/run.error.log
    Updating crates.io index
      Adding tokio v1.34.0 to dependencies.
             Features:
             - bytes
             - fs
             - full
             - io-std
             - io-util
             - libc
             - macros
             - mio
             - net
             - num_cpus
             - parking_lot
             - process
             - rt
             - rt-multi-thread
             - signal
             - signal-hook-registry
             - socket2
             - sync
             - test-util
             - time
             - tokio-macros
             - tracing
             - windows-sys

P:\anqi\Desktop\tech\rust\projects\rust-study\src\comprehensive-rust\ok\rs\example_139>copy /y ..\139.rs src\main.rs
        1 file(s) copied.

P:\anqi\Desktop\tech\rust\projects\rust-study\src\comprehensive-rust\ok\rs\example_139>cargo run   1>run.log  & start "" notepad run.log   & pause
   Compiling example_139 v0.1.0 (P:\anqi\Desktop\tech\rust\projects\rust-study\src\comprehensive-rust\ok\rs\example_139)error[E0432]: unresolved imports `tokio::sync::mpsc`, `tokio::sync::mpsc`
 --> src\main.rs:7:18
  |
7 | use tokio::sync::mpsc::{self, Receiver};
  |                  ^^^^   ^^^^ no `mpsc` in `sync`
  |                  |
  |                  could not find `mpsc` in `sync`
  |
  = help: consider importing this module instead:
          std::sync::mpsc

error[E0433]: failed to resolve: could not find `main` in `tokio`
  --> src\main.rs:20:10
   |
20 | #[tokio::main]
   |          ^^^^ could not find `main` in `tokio`

error[E0425]: cannot find function `spawn` in crate `tokio`
   --> src\main.rs:23:36
    |
23  |     let ping_handler_task = tokio::spawn(ping_handler(receiver));
    |                                    ^^^^^ not found in `tokio`
    |
note: found an item that was configured out
   --> C:\Users\anqi\.cargo\registry\src\index.crates.io-6f17d22bba15001f\tokio-1.34.0\src\lib.rs:546:19
    |
546 |     pub use task::spawn;
    |                   ^^^^^
    = note: the item is gated behind the `rt` feature
help: consider importing this function
    |
7   + use std::thread::spawn;
    |
help: if you import `spawn`, refer to it directly
    |
23  -     let ping_handler_task = tokio::spawn(ping_handler(receiver));
23  +     let ping_handler_task = spawn(ping_handler(receiver));
    |

error[E0603]: module `sync` is private
   --> src\main.rs:7:12
    |
7   | use tokio::sync::mpsc::{self, Receiver};
    |            ^^^^ private module
    |
note: the module `sync` is defined here
   --> C:\Users\anqi\.cargo\registry\src\index.crates.io-6f17d22bba15001f\tokio-1.34.0\src\lib.rs:541:5
    |
541 |     mod sync;
    |     ^^^^^^^^

error[E0752]: `main` function is not allowed to be `async`
  --> src\main.rs:21:1
   |
21 | async fn main() {
   | ^^^^^^^^^^^^^^^ `main` function is not allowed to be `async`

Some errors have detailed explanations: E0425, E0432, E0433, E0603, E0752.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `example_139` (bin "example_139") due to 5 previous errors